--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
           Dania Luna
           <div class="contact_info">
             <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          jdoe@jeemail.com
+          daniadumond@gmail.com
         </div>
         <div style="clear:both;"></div>
         <div class="contact_info">
           <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +13456764598
-
+          +17373519599
         </div>
         </div>
         <div class="topdiv">
